build/resources/test/LO-2/InvalidPrograms/test_9.lo
// invoke non-defined method

int foo() {
    {
        return 0;
    }
}

int main() {
    int a;
    {
      a = goo();
      return a;
    }
}